<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ackermann_steering_controller</name>
  <version>3.10.1</version>
  <description>Steering controller for Four-Wheels kinematics. All wheels can steer and drive the robotic platform.</description>
  <license>Apache License 2.0</license>
  <maintainer email="graziato.davide@outlook.it">Davide Graziato</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>generate_parameter_library</build_depend>

  <depend>control_msgs</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_srvs</depend>
  <depend>steering_controllers_library</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
